<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".view.ui.UploadActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/this_is_avatar"
                android:src="@drawable/user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/regularpop">

                <EditText
                    android:id="@+id/et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="What's happening?"
                    android:backgroundTint="@color/white"
                    android:hint="@string/what_s_happening"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar2">

            <ImageView
                android:id="@+id/iv_image_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/this_is_image_story"
                android:src="@drawable/image_placeholder2"
                app:layout_constraintStart_toStartOf="@id/card_view"
                app:layout_constraintTop_toBottomOf="@+id/card_view" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/ib_camerax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/use_camera_x"
            android:drawableLeft="@drawable/baseline_photo_camera_24"
            android:text="@string/camerax"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/ib_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:contentDescription="@string/add_image_from_gallery"
            android:drawableLeft="@drawable/baseline_image_search_24"
            android:text="@string/gallery"
            app:layout_constraintStart_toEndOf="@+id/ib_camerax"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <ImageButton
            android:id="@+id/ib_upload"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/design_default_color_primary"
            android:contentDescription="@string/upload_story_to_feed"
            android:src="@drawable/baseline_send_24"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/share_location"
            app:layout_constraintEnd_toStartOf="@+id/ib_upload"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_upload"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>