<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/pv_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/ib_take_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/roundcorner"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_switch_cam"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/baseline_cameraswitch_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib_take_photo"
        app:layout_constraintTop_toTopOf="@+id/ib_take_photo"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>